--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.16",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
