--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.16",
+    "crypto-js": "^4.2.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
