--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.16",
+    "chart.js": "^4.4.7",
     "crypto-js": "^4.2.0",
     "vue": "^3.4.29",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
